--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,11 @@
     "ant-design-vue": "^2.0.0-rc.3",
     "axios": "^0.21.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.6",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
