--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^5.1.8",
     "ant-design-vue": "^2.0.0-rc.3",
     "axios": "^0.21.0",
+    "query-string": "^7.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0-0"
